--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="globals.css" />
     <link rel="stylesheet" href="home.css" />
   </head>
+
+
+  
   <body>
     <div class="homepage">
       <div class="div">
