change directory logo image

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="text-wrapper-3">About</div>
             <div class="text-wrapper-4">Search</div>
             <div class="text-wrapper-5">BGM</div>
-            <img class="pmlogo" src="img/pmlogo-1.png" />
+            <img class="pmlogo" src="resources/logo/pmlogo.png" />
           </div>
         </div>
         <div class="list">
