update code arrangement

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   
   <body>
     <div class="homepage">
+
+      <!-- Navigation Bar -->
       <div class="div">
         <div class="navbar">
           <div class="navbar-2">
@@ -23,6 +25,15 @@
             <img class="pmlogo" src="resources/logo/pmlogo.png" />
           </div>
         </div>
+
+
+
+        <div class="text-wrapper-15">Home</div>
+
+
+
+        <div class="text-wrapper-12">Music Library</div>
+        <!-- Music Library List 1 -->
         <div class="list">
           <div class="overlap">
             <div class="rectangle"></div>
@@ -31,6 +42,8 @@
             <div class="text-wrapper-8">Artist Title</div>
           </div>
         </div>
+
+        <!-- Music Library List 2 -->
         <div class="overlap-wrapper">
           <div class="overlap">
             <div class="rectangle"></div>
@@ -39,22 +52,8 @@
             <div class="text-wrapper-8">Artist Title</div>
           </div>
         </div>
-        <div class="overlap-group-wrapper">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-6">Details</div></div>
-            <div class="text-wrapper-7">Song Title</div>
-            <div class="text-wrapper-8">Artist Title</div>
-          </div>
-        </div>
-        <div class="div-wrapper">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-6">Details</div></div>
-            <div class="text-wrapper-7">Song Title</div>
-            <div class="text-wrapper-8">Artist Title</div>
-          </div>
-        </div>
+
+         <!-- Music Library List 3 -->
         <div class="list-2">
           <div class="overlap">
             <div class="rectangle"></div>
@@ -63,6 +62,8 @@
             <div class="text-wrapper-8">Artist Title</div>
           </div>
         </div>
+
+        <!-- Music Library List 4 -->
         <div class="list-3">
           <div class="overlap">
             <div class="rectangle"></div>
@@ -71,6 +72,31 @@
             <div class="text-wrapper-8">Artist Title</div>
           </div>
         </div>
+
+        <!-- Music Library List 5 -->
+        <div class="overlap-group-wrapper">
+          <div class="overlap">
+            <div class="rectangle"></div>
+            <div class="overlap-group"><div class="text-wrapper-6">Details</div></div>
+            <div class="text-wrapper-7">Song Title</div>
+            <div class="text-wrapper-8">Artist Title</div>
+          </div>
+        </div>
+
+        <!-- Music Library List 6 -->
+        <div class="div-wrapper">
+          <div class="overlap">
+            <div class="rectangle"></div>
+            <div class="overlap-group"><div class="text-wrapper-6">Details</div></div>
+            <div class="text-wrapper-7">Song Title</div>
+            <div class="text-wrapper-8">Artist Title</div>
+          </div>
+        </div>
+        
+
+
+       <div class="text-wrapper-13">Background Music Library</div>
+        <!-- BGM Library List 1 -->
         <div class="list-4">
           <div class="overlap">
             <div class="rectangle"></div>
@@ -79,6 +105,8 @@
             <div class="text-wrapper-8">Artist Title</div>
           </div>
         </div>
+
+        <!-- BGM Library List 2 -->
         <div class="list-5">
           <div class="overlap">
             <div class="rectangle"></div>
@@ -87,22 +115,8 @@
             <div class="text-wrapper-8">Artist Title</div>
           </div>
         </div>
-        <div class="list-6">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-6">Details</div></div>
-            <div class="text-wrapper-7">Song Title</div>
-            <div class="text-wrapper-8">Artist Title</div>
-          </div>
-        </div>
-        <div class="list-7">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-6">Details</div></div>
-            <div class="text-wrapper-7">Song Title</div>
-            <div class="text-wrapper-8">Artist Title</div>
-          </div>
-        </div>
+
+        <!-- BGM Library List 3 -->
         <div class="list-8">
           <div class="overlap">
             <div class="rectangle"></div>
@@ -111,6 +125,8 @@
             <div class="text-wrapper-8">Artist Title</div>
           </div>
         </div>
+
+        <!-- BGM Library List 4 -->
         <div class="list-9">
           <div class="overlap">
             <div class="rectangle"></div>
@@ -119,6 +135,33 @@
             <div class="text-wrapper-8">Artist Title</div>
           </div>
         </div>
+
+        <!-- BGM Library List 5 -->
+        <div class="list-6">
+          <div class="overlap">
+            <div class="rectangle"></div>
+            <div class="overlap-group"><div class="text-wrapper-6">Details</div></div>
+            <div class="text-wrapper-7">Song Title</div>
+            <div class="text-wrapper-8">Artist Title</div>
+          </div>
+        </div>
+
+        <!-- BGM Library List 6 -->
+        <div class="list-7">
+          <div class="overlap">
+            <div class="rectangle"></div>
+            <div class="overlap-group"><div class="text-wrapper-6">Details</div></div>
+            <div class="text-wrapper-7">Song Title</div>
+            <div class="text-wrapper-8">Artist Title</div>
+          </div>
+        </div>
+        
+
+
+
+
+        <div class="text-wrapper-14">Sound Effects Library</div>
+        <!-- SFX Library List 1 -->
         <div class="list-10">
           <div class="overlap-2">
             <div class="overlap-group-2"><div class="text-wrapper-9">Details</div></div>
@@ -126,6 +169,8 @@
             <div class="text-wrapper-11">Song Title</div>
           </div>
         </div>
+
+        <!-- SFX Library List 2 -->
         <div class="list-11">
           <div class="overlap-2">
             <div class="overlap-group-2"><div class="text-wrapper-9">Details</div></div>
@@ -133,20 +178,8 @@
             <div class="text-wrapper-11">Song Title</div>
           </div>
         </div>
-        <div class="list-12">
-          <div class="overlap-2">
-            <div class="overlap-group-2"><div class="text-wrapper-9">Details</div></div>
-            <div class="overlap-group-3"><div class="text-wrapper-10">Play</div></div>
-            <div class="text-wrapper-11">Song Title</div>
-          </div>
-        </div>
-        <div class="list-13">
-          <div class="overlap-2">
-            <div class="overlap-group-2"><div class="text-wrapper-9">Details</div></div>
-            <div class="overlap-group-3"><div class="text-wrapper-10">Play</div></div>
-            <div class="text-wrapper-11">Song Title</div>
-          </div>
-        </div>
+
+        <!-- SFX Library List 3 -->
         <div class="list-14">
           <div class="overlap-2">
             <div class="overlap-group-2"><div class="text-wrapper-9">Details</div></div>
@@ -154,6 +187,8 @@
             <div class="text-wrapper-11">Song Title</div>
           </div>
         </div>
+
+        <!-- SFX Library List 4 -->
         <div class="list-15">
           <div class="overlap-2">
             <div class="overlap-group-2"><div class="text-wrapper-9">Details</div></div>
@@ -161,10 +196,29 @@
             <div class="text-wrapper-11">Song Title</div>
           </div>
         </div>
-        <div class="text-wrapper-12">Music Library</div>
-        <div class="text-wrapper-13">Background Music Library</div>
-        <div class="text-wrapper-14">Sound Effects Library</div>
-        <div class="text-wrapper-15">Home</div>
+
+        <!-- SFX Library List 5 -->
+        <div class="list-12">
+          <div class="overlap-2">
+            <div class="overlap-group-2"><div class="text-wrapper-9">Details</div></div>
+            <div class="overlap-group-3"><div class="text-wrapper-10">Play</div></div>
+            <div class="text-wrapper-11">Song Title</div>
+          </div>
+        </div>
+
+        <!-- SFX Library List 6 -->
+        <div class="list-13">
+          <div class="overlap-2">
+            <div class="overlap-group-2"><div class="text-wrapper-9">Details</div></div>
+            <div class="overlap-group-3"><div class="text-wrapper-10">Play</div></div>
+            <div class="text-wrapper-11">Song Title</div>
+          </div>
+        </div>
+
+
+
+
+
       </div>
     </div>
   </body>
