--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
       <div class="div">
         <div class="navbar">
           <div class="navbar-2">
-            <div class="text-wrapper">Musics</div>
+            <div class="text-wrapper">Musics
+              <a href+></a>
+            </div>
             <div class="text-wrapper-2">SFX</div>
             <div class="text-wrapper-3">About</div>
             <div class="text-wrapper-4">Search</div>
