added buttons and code changes

--- a/index.html
+++ b/index.html
@@ -16,14 +16,12 @@
       <div class="div">
         <div class="navbar">
           <div class="navbar-2">
-            <div class="text-wrapper">Musics
-              <a href+></a>
-            </div>
-            <div class="text-wrapper-2">SFX</div>
-            <div class="text-wrapper-3">About</div>
-            <div class="text-wrapper-4">Search</div>
-            <div class="text-wrapper-5">BGM</div>
-            <img class="pmlogo" src="resources/logo/pmlogo.png" />
+            <div class="text-wrapper"><a href="sites/musiclib/musiclib_main.html">Musics</a></div>
+            <div class="text-wrapper-2"><a href="sites/sfxlib/sfxlib_main.html">SFX</a></div>
+            <div class="text-wrapper-3"><a href="sites/about/about.html">About</a></div>
+            <div class="text-wrapper-4"><a href="sites/search/searchpage.html">Search</a></div>
+            <div class="text-wrapper-5"><a href="sites/bgmlib/bgm_main.html">BGM</a></div>
+            <img class="pmlogo" src="resources/logo/pmlogo.png"/>
           </div>
         </div>
 
@@ -32,8 +30,8 @@
         <div class="text-wrapper-15">Home</div>
 
 
-
         <div class="text-wrapper-12">Music Library</div>
+        <div class="more1"><div class="moretxt">More &gt;</div></div>
         <!-- Music Library List 1 -->
         <div class="list">
           <div class="overlap">
@@ -97,6 +95,7 @@
 
 
        <div class="text-wrapper-13">Background Music Library</div>
+       <div class="more2"><div class="moretxt">More &gt;</div></div>
         <!-- BGM Library List 1 -->
         <div class="list-4">
           <div class="overlap">
@@ -156,12 +155,12 @@
             <div class="text-wrapper-8">Artist Title</div>
           </div>
         </div>
-        
 
 
 
 
         <div class="text-wrapper-14">Sound Effects Library</div>
+        <div class="more3"><div class="moretxt">More &gt;</div></div>
         <!-- SFX Library List 1 -->
         <div class="list-10">
           <div class="overlap-2">
@@ -215,10 +214,6 @@
             <div class="text-wrapper-11">Song Title</div>
           </div>
         </div>
-
-
-
-
 
       </div>
     </div>
