changes directory and code

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
       <div class="div">
         <div class="navbar">
           <div class="navbar-2">
-            <div class="text-wrapper"><a href="sites/musiclib/musiclib_main.html">Musics</a></div>
-            <div class="text-wrapper-2"><a href="sites/sfxlib/sfxlib_main.html">SFX</a></div>
-            <div class="text-wrapper-3"><a href="sites/about/about.html">About</a></div>
-            <div class="text-wrapper-4"><a href="sites/search/searchpage.html">Search</a></div>
-            <div class="text-wrapper-5"><a href="sites/bgmlib/bgm_main.html">BGM</a></div>
+            <div class="text-wrapper"><a href="musiclib_main.html">Musics</a></div>
+            <div class="text-wrapper-2"><a href="sfxlib_main.html">SFX</a></div>
+            <div class="text-wrapper-3"><a href="about.html">About</a></div>
+            <div class="text-wrapper-4"><a href="searchpage.html">Search</a></div>
+            <div class="text-wrapper-5"><a href="bgm_main.html">BGM</a></div>
             <img class="pmlogo" src="resources/logo/pmlogo.png"/>
           </div>
         </div>
