--- a/musiclib_main.html
+++ b/musiclib_main.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="../musiclib/musiclib_main.css" />
+    <link rel="stylesheet" href="musiclib_main.css" />
   </head>
   <body>
     <div class="musics-library">
