code changes update

--- a/musiclib_main.html
+++ b/musiclib_main.html
@@ -30,163 +30,163 @@
 
         </div>
         <div class="list">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-7">Details</div></div>
-            <div class="text-wrapper-8">Song Title</div>
-            <div class="text-wrapper-9">Artist Title</div>
+          <div class="listboarder">
+            <div class="album_style"></div>
+            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="songtitle_style">Song Title</div>
+            <div class="artisttitle_style">Artist Title</div>
           </div>
         </div>
-        <div class="overlap-wrapper">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-7">Details</div></div>
-            <div class="text-wrapper-8">Song Title</div>
-            <div class="text-wrapper-9">Artist Title</div>
+        <div class="list2">
+          <div class="listboarder">
+            <div class="album_style"></div>
+            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="songtitle_style">Song Title</div>
+            <div class="artisttitle_style">Artist Title</div>
           </div>
         </div>
-        <div class="overlap-group-wrapper">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-7">Details</div></div>
-            <div class="text-wrapper-8">Song Title</div>
-            <div class="text-wrapper-9">Artist Title</div>
+        <div class="list13">
+          <div class="listboarder">
+            <div class="album_style"></div>
+            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="songtitle_style">Song Title</div>
+            <div class="artisttitle_style">Artist Title</div>
           </div>
         </div>
         <div class="div-wrapper">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-7">Details</div></div>
-            <div class="text-wrapper-8">Song Title</div>
-            <div class="text-wrapper-9">Artist Title</div>
+          <div class="listboarder">
+            <div class="album_style"></div>
+            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="songtitle_style">Song Title</div>
+            <div class="artisttitle_style">Artist Title</div>
           </div>
         </div>
         <div class="list-2">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-7">Details</div></div>
-            <div class="text-wrapper-8">Song Title</div>
-            <div class="text-wrapper-9">Artist Title</div>
+          <div class="listboarder">
+            <div class="album_style"></div>
+            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="songtitle_style">Song Title</div>
+            <div class="artisttitle_style">Artist Title</div>
           </div>
         </div>
         <div class="list-3">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-7">Details</div></div>
-            <div class="text-wrapper-8">Song Title</div>
-            <div class="text-wrapper-9">Artist Title</div>
+          <div class="listboarder">
+            <div class="album_style"></div>
+            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="songtitle_style">Song Title</div>
+            <div class="artisttitle_style">Artist Title</div>
           </div>
         </div>
         <div class="list-4">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-7">Details</div></div>
-            <div class="text-wrapper-8">Song Title</div>
-            <div class="text-wrapper-9">Artist Title</div>
+          <div class="listboarder">
+            <div class="album_style"></div>
+            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="songtitle_style">Song Title</div>
+            <div class="artisttitle_style">Artist Title</div>
           </div>
         </div>
         <div class="list-5">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-7">Details</div></div>
-            <div class="text-wrapper-8">Song Title</div>
-            <div class="text-wrapper-9">Artist Title</div>
+          <div class="listboarder">
+            <div class="album_style"></div>
+            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="songtitle_style">Song Title</div>
+            <div class="artisttitle_style">Artist Title</div>
           </div>
         </div>
         <div class="list-6">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-7">Details</div></div>
-            <div class="text-wrapper-8">Song Title</div>
-            <div class="text-wrapper-9">Artist Title</div>
+          <div class="listboarder">
+            <div class="album_style"></div>
+            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="songtitle_style">Song Title</div>
+            <div class="artisttitle_style">Artist Title</div>
           </div>
         </div>
         <div class="list-7">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-7">Details</div></div>
-            <div class="text-wrapper-8">Song Title</div>
-            <div class="text-wrapper-9">Artist Title</div>
+          <div class="listboarder">
+            <div class="album_style"></div>
+            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="songtitle_style">Song Title</div>
+            <div class="artisttitle_style">Artist Title</div>
           </div>
         </div>
         <div class="list-8">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-7">Details</div></div>
-            <div class="text-wrapper-8">Song Title</div>
-            <div class="text-wrapper-9">Artist Title</div>
+          <div class="listboarder">
+            <div class="album_style"></div>
+            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="songtitle_style">Song Title</div>
+            <div class="artisttitle_style">Artist Title</div>
           </div>
         </div>
         <div class="list-9">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-7">Details</div></div>
-            <div class="text-wrapper-8">Song Title</div>
-            <div class="text-wrapper-9">Artist Title</div>
+          <div class="listboarder">
+            <div class="album_style"></div>
+            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="songtitle_style">Song Title</div>
+            <div class="artisttitle_style">Artist Title</div>
           </div>
         </div>
         <div class="list-10">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-7">Details</div></div>
-            <div class="text-wrapper-8">Song Title</div>
-            <div class="text-wrapper-9">Artist Title</div>
+          <div class="listboarder">
+            <div class="album_style"></div>
+            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="songtitle_style">Song Title</div>
+            <div class="artisttitle_style">Artist Title</div>
           </div>
         </div>
         <div class="list-11">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-7">Details</div></div>
-            <div class="text-wrapper-8">Song Title</div>
-            <div class="text-wrapper-9">Artist Title</div>
+          <div class="listboarder">
+            <div class="album_style"></div>
+            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="songtitle_style">Song Title</div>
+            <div class="artisttitle_style">Artist Title</div>
           </div>
         </div>
         <div class="list-12">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-7">Details</div></div>
-            <div class="text-wrapper-8">Song Title</div>
-            <div class="text-wrapper-9">Artist Title</div>
+          <div class="listboarder">
+            <div class="album_style"></div>
+            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="songtitle_style">Song Title</div>
+            <div class="artisttitle_style">Artist Title</div>
           </div>
         </div>
         <div class="list-13">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-7">Details</div></div>
-            <div class="text-wrapper-8">Song Title</div>
-            <div class="text-wrapper-9">Artist Title</div>
+          <div class="listboarder">
+            <div class="album_style"></div>
+            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="songtitle_style">Song Title</div>
+            <div class="artisttitle_style">Artist Title</div>
           </div>
         </div>
         <div class="list-14">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-7">Details</div></div>
-            <div class="text-wrapper-8">Song Title</div>
-            <div class="text-wrapper-9">Artist Title</div>
+          <div class="listboarder">
+            <div class="album_style"></div>
+            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="songtitle_style">Song Title</div>
+            <div class="artisttitle_style">Artist Title</div>
           </div>
         </div>
         <div class="list-15">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-7">Details</div></div>
-            <div class="text-wrapper-8">Song Title</div>
-            <div class="text-wrapper-9">Artist Title</div>
+          <div class="listboarder">
+            <div class="album_style"></div>
+            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="songtitle_style">Song Title</div>
+            <div class="artisttitle_style">Artist Title</div>
           </div>
         </div>
         <div class="list-16">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-7">Details</div></div>
-            <div class="text-wrapper-8">Song Title</div>
-            <div class="text-wrapper-9">Artist Title</div>
+          <div class="listboarder">
+            <div class="album_style"></div>
+            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="songtitle_style">Song Title</div>
+            <div class="artisttitle_style">Artist Title</div>
           </div>
         </div>
         <div class="list-17">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-7">Details</div></div>
-            <div class="text-wrapper-8">Song Title</div>
-            <div class="text-wrapper-9">Artist Title</div>
+          <div class="listboarder">
+            <div class="album_style"></div>
+            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="songtitle_style">Song Title</div>
+            <div class="artisttitle_style">Artist Title</div>
           </div>
         </div>
 
