code change update

--- a/index.html
+++ b/index.html
@@ -34,61 +34,61 @@
         <div class="more1"><div class="moretxt">More &gt;</div></div>
         <!-- Music Library List 1 -->
         <div class="list">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-6">Details</div></div>
-            <div class="text-wrapper-7">Song Title</div>
-            <div class="text-wrapper-8">Artist Title</div>
+          <div class="listboarder">
+            <div class="album_style"></div>
+            <div class="buttonstyle"><div class="text-wrapper-6">Details</div></div>
+            <div class="songtitle_style">Song Title</div>
+            <div class="artisttitle_style">Artist Title</div>
           </div>
         </div>
 
         <!-- Music Library List 2 -->
-        <div class="overlap-wrapper">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-6">Details</div></div>
-            <div class="text-wrapper-7">Song Title</div>
-            <div class="text-wrapper-8">Artist Title</div>
+        <div class="list2">
+          <div class="listboarder">
+            <div class="album_style"></div>
+            <div class="buttonstyle"><div class="text-wrapper-6">Details</div></div>
+            <div class="songtitle_style">Song Title</div>
+            <div class="artisttitle_style">Artist Title</div>
           </div>
         </div>
 
          <!-- Music Library List 3 -->
         <div class="list-2">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-6">Details</div></div>
-            <div class="text-wrapper-7">Song Title</div>
-            <div class="text-wrapper-8">Artist Title</div>
+          <div class="listboarder">
+            <div class="album_style"></div>
+            <div class="buttonstyle"><div class="text-wrapper-6">Details</div></div>
+            <div class="songtitle_style">Song Title</div>
+            <div class="artisttitle_style">Artist Title</div>
           </div>
         </div>
 
         <!-- Music Library List 4 -->
         <div class="list-3">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-6">Details</div></div>
-            <div class="text-wrapper-7">Song Title</div>
-            <div class="text-wrapper-8">Artist Title</div>
+          <div class="listboarder">
+            <div class="album_style"></div>
+            <div class="buttonstyle"><div class="text-wrapper-6">Details</div></div>
+            <div class="songtitle_style">Song Title</div>
+            <div class="artisttitle_style">Artist Title</div>
           </div>
         </div>
 
         <!-- Music Library List 5 -->
-        <div class="overlap-group-wrapper">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-6">Details</div></div>
-            <div class="text-wrapper-7">Song Title</div>
-            <div class="text-wrapper-8">Artist Title</div>
+        <div class="list5">
+          <div class="listboarder">
+            <div class="album_style"></div>
+            <div class="buttonstyle"><div class="text-wrapper-6">Details</div></div>
+            <div class="songtitle_style">Song Title</div>
+            <div class="artisttitle_style">Artist Title</div>
           </div>
         </div>
 
         <!-- Music Library List 6 -->
         <div class="div-wrapper">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-6">Details</div></div>
-            <div class="text-wrapper-7">Song Title</div>
-            <div class="text-wrapper-8">Artist Title</div>
+          <div class="listboarder">
+            <div class="album_style"></div>
+            <div class="buttonstyle"><div class="text-wrapper-6">Details</div></div>
+            <div class="songtitle_style">Song Title</div>
+            <div class="artisttitle_style">Artist Title</div>
           </div>
         </div>
         
@@ -98,61 +98,61 @@
        <div class="more2"><div class="moretxt">More &gt;</div></div>
         <!-- BGM Library List 1 -->
         <div class="list-4">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-6">Details</div></div>
-            <div class="text-wrapper-7">Song Title</div>
-            <div class="text-wrapper-8">Artist Title</div>
+          <div class="listboarder">
+            <div class="album_style"></div>
+            <div class="buttonstyle"><div class="text-wrapper-6">Details</div></div>
+            <div class="songtitle_style">Song Title</div>
+            <div class="artisttitle_style">Artist Title</div>
           </div>
         </div>
 
         <!-- BGM Library List 2 -->
         <div class="list-5">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-6">Details</div></div>
-            <div class="text-wrapper-7">Song Title</div>
-            <div class="text-wrapper-8">Artist Title</div>
+          <div class="listboarder">
+            <div class="album_style"></div>
+            <div class="buttonstyle"><div class="text-wrapper-6">Details</div></div>
+            <div class="songtitle_style">Song Title</div>
+            <div class="artisttitle_style">Artist Title</div>
           </div>
         </div>
 
         <!-- BGM Library List 3 -->
         <div class="list-8">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-6">Details</div></div>
-            <div class="text-wrapper-7">Song Title</div>
-            <div class="text-wrapper-8">Artist Title</div>
+          <div class="listboarder">
+            <div class="album_style"></div>
+            <div class="buttonstyle"><div class="text-wrapper-6">Details</div></div>
+            <div class="songtitle_style">Song Title</div>
+            <div class="artisttitle_style">Artist Title</div>
           </div>
         </div>
 
         <!-- BGM Library List 4 -->
         <div class="list-9">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-6">Details</div></div>
-            <div class="text-wrapper-7">Song Title</div>
-            <div class="text-wrapper-8">Artist Title</div>
+          <div class="listboarder">
+            <div class="album_style"></div>
+            <div class="buttonstyle"><div class="text-wrapper-6">Details</div></div>
+            <div class="songtitle_style">Song Title</div>
+            <div class="artisttitle_style">Artist Title</div>
           </div>
         </div>
 
         <!-- BGM Library List 5 -->
         <div class="list-6">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-6">Details</div></div>
-            <div class="text-wrapper-7">Song Title</div>
-            <div class="text-wrapper-8">Artist Title</div>
+          <div class="listboarder">
+            <div class="album_style"></div>
+            <div class="buttonstyle"><div class="text-wrapper-6">Details</div></div>
+            <div class="songtitle_style">Song Title</div>
+            <div class="artisttitle_style">Artist Title</div>
           </div>
         </div>
 
         <!-- BGM Library List 6 -->
         <div class="list-7">
-          <div class="overlap">
-            <div class="rectangle"></div>
-            <div class="overlap-group"><div class="text-wrapper-6">Details</div></div>
-            <div class="text-wrapper-7">Song Title</div>
-            <div class="text-wrapper-8">Artist Title</div>
+          <div class="listboarder">
+            <div class="album_style"></div>
+            <div class="buttonstyle"><div class="text-wrapper-6">Details</div></div>
+            <div class="songtitle_style">Song Title</div>
+            <div class="artisttitle_style">Artist Title</div>
           </div>
         </div>
 
@@ -163,55 +163,55 @@
         <div class="more3"><div class="moretxt">More &gt;</div></div>
         <!-- SFX Library List 1 -->
         <div class="list-10">
-          <div class="overlap-2">
-            <div class="overlap-group-2"><div class="text-wrapper-9">Details</div></div>
-            <div class="overlap-group-3"><div class="text-wrapper-10">Play</div></div>
-            <div class="text-wrapper-11">Song Title</div>
+          <div class="listboarder2">
+            <div class="buttonstyle2"><div class="text-wrapper-9">Details</div></div>
+            <div class="buttonstyle3"><div class="text-wrapper-10">Play</div></div>
+            <div class="songtitle_style2">Song Title</div>
           </div>
         </div>
 
         <!-- SFX Library List 2 -->
         <div class="list-11">
-          <div class="overlap-2">
-            <div class="overlap-group-2"><div class="text-wrapper-9">Details</div></div>
-            <div class="overlap-group-3"><div class="text-wrapper-10">Play</div></div>
-            <div class="text-wrapper-11">Song Title</div>
+          <div class="listboarder2">
+            <div class="buttonstyle2"><div class="text-wrapper-9">Details</div></div>
+            <div class="buttonstyle3"><div class="text-wrapper-10">Play</div></div>
+            <div class="songtitle_style2">Song Title</div>
           </div>
         </div>
 
         <!-- SFX Library List 3 -->
         <div class="list-14">
-          <div class="overlap-2">
-            <div class="overlap-group-2"><div class="text-wrapper-9">Details</div></div>
-            <div class="overlap-group-3"><div class="text-wrapper-10">Play</div></div>
-            <div class="text-wrapper-11">Song Title</div>
+          <div class="listboarder2">
+            <div class="buttonstyle2"><div class="text-wrapper-9">Details</div></div>
+            <div class="buttonstyle3"><div class="text-wrapper-10">Play</div></div>
+            <div class="songtitle_style2">Song Title</div>
           </div>
         </div>
 
         <!-- SFX Library List 4 -->
         <div class="list-15">
-          <div class="overlap-2">
-            <div class="overlap-group-2"><div class="text-wrapper-9">Details</div></div>
-            <div class="overlap-group-3"><div class="text-wrapper-10">Play</div></div>
-            <div class="text-wrapper-11">Song Title</div>
+          <div class="listboarder2">
+            <div class="buttonstyle2"><div class="text-wrapper-9">Details</div></div>
+            <div class="buttonstyle3"><div class="text-wrapper-10">Play</div></div>
+            <div class="songtitle_style2">Song Title</div>
           </div>
         </div>
 
         <!-- SFX Library List 5 -->
         <div class="list-12">
-          <div class="overlap-2">
-            <div class="overlap-group-2"><div class="text-wrapper-9">Details</div></div>
-            <div class="overlap-group-3"><div class="text-wrapper-10">Play</div></div>
-            <div class="text-wrapper-11">Song Title</div>
+          <div class="listboarder2">
+            <div class="buttonstyle2"><div class="text-wrapper-9">Details</div></div>
+            <div class="buttonstyle3"><div class="text-wrapper-10">Play</div></div>
+            <div class="songtitle_style2">Song Title</div>
           </div>
         </div>
 
         <!-- SFX Library List 6 -->
         <div class="list-13">
-          <div class="overlap-2">
-            <div class="overlap-group-2"><div class="text-wrapper-9">Details</div></div>
-            <div class="overlap-group-3"><div class="text-wrapper-10">Play</div></div>
-            <div class="text-wrapper-11">Song Title</div>
+          <div class="listboarder2">
+            <div class="buttonstyle2"><div class="text-wrapper-9">Details</div></div>
+            <div class="buttonstyle3"><div class="text-wrapper-10">Play</div></div>
+            <div class="songtitle_style2">Song Title</div>
           </div>
         </div>
 
