--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="list">
           <div class="listboarder">
             <div class="album_style"></div>
-            <div class="buttonstyle"><div class="text-wrapper-6">Details</div></div>
+            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
           </div>
@@ -46,7 +46,7 @@
         <div class="list2">
           <div class="listboarder">
             <div class="album_style"></div>
-            <div class="buttonstyle"><div class="text-wrapper-6">Details</div></div>
+            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
           </div>
@@ -56,7 +56,7 @@
         <div class="list-2">
           <div class="listboarder">
             <div class="album_style"></div>
-            <div class="buttonstyle"><div class="text-wrapper-6">Details</div></div>
+            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
           </div>
@@ -66,7 +66,7 @@
         <div class="list-3">
           <div class="listboarder">
             <div class="album_style"></div>
-            <div class="buttonstyle"><div class="text-wrapper-6">Details</div></div>
+            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
           </div>
@@ -76,7 +76,7 @@
         <div class="list5">
           <div class="listboarder">
             <div class="album_style"></div>
-            <div class="buttonstyle"><div class="text-wrapper-6">Details</div></div>
+            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
           </div>
@@ -86,7 +86,7 @@
         <div class="div-wrapper">
           <div class="listboarder">
             <div class="album_style"></div>
-            <div class="buttonstyle"><div class="text-wrapper-6">Details</div></div>
+            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
           </div>
@@ -100,7 +100,7 @@
         <div class="list-4">
           <div class="listboarder">
             <div class="album_style"></div>
-            <div class="buttonstyle"><div class="text-wrapper-6">Details</div></div>
+            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
           </div>
@@ -110,7 +110,7 @@
         <div class="list-5">
           <div class="listboarder">
             <div class="album_style"></div>
-            <div class="buttonstyle"><div class="text-wrapper-6">Details</div></div>
+            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
           </div>
@@ -120,7 +120,7 @@
         <div class="list-8">
           <div class="listboarder">
             <div class="album_style"></div>
-            <div class="buttonstyle"><div class="text-wrapper-6">Details</div></div>
+            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
           </div>
@@ -130,7 +130,7 @@
         <div class="list-9">
           <div class="listboarder">
             <div class="album_style"></div>
-            <div class="buttonstyle"><div class="text-wrapper-6">Details</div></div>
+            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
           </div>
@@ -140,7 +140,7 @@
         <div class="list-6">
           <div class="listboarder">
             <div class="album_style"></div>
-            <div class="buttonstyle"><div class="text-wrapper-6">Details</div></div>
+            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
           </div>
@@ -150,7 +150,7 @@
         <div class="list-7">
           <div class="listboarder">
             <div class="album_style"></div>
-            <div class="buttonstyle"><div class="text-wrapper-6">Details</div></div>
+            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
           </div>
@@ -164,8 +164,8 @@
         <!-- SFX Library List 1 -->
         <div class="list-10">
           <div class="listboarder2">
-            <div class="buttonstyle2"><div class="text-wrapper-9">Details</div></div>
-            <div class="buttonstyle3"><div class="text-wrapper-10">Play</div></div>
+            <div class="buttonstyle2"><div class="buttontextstyle2">Details</div></div>
+            <div class="buttonstyle3"><div class="buttontextstyle3">Play</div></div>
             <div class="songtitle_style2">Song Title</div>
           </div>
         </div>
@@ -173,8 +173,8 @@
         <!-- SFX Library List 2 -->
         <div class="list-11">
           <div class="listboarder2">
-            <div class="buttonstyle2"><div class="text-wrapper-9">Details</div></div>
-            <div class="buttonstyle3"><div class="text-wrapper-10">Play</div></div>
+            <div class="buttonstyle2"><div class="buttontextstyle2">Details</div></div>
+            <div class="buttonstyle3"><div class="buttontextstyle3">Play</div></div>
             <div class="songtitle_style2">Song Title</div>
           </div>
         </div>
@@ -182,8 +182,8 @@
         <!-- SFX Library List 3 -->
         <div class="list-14">
           <div class="listboarder2">
-            <div class="buttonstyle2"><div class="text-wrapper-9">Details</div></div>
-            <div class="buttonstyle3"><div class="text-wrapper-10">Play</div></div>
+            <div class="buttonstyle2"><div class="buttontextstyle2">Details</div></div>
+            <div class="buttonstyle3"><div class="buttontextstyle3">Play</div></div>
             <div class="songtitle_style2">Song Title</div>
           </div>
         </div>
@@ -191,8 +191,8 @@
         <!-- SFX Library List 4 -->
         <div class="list-15">
           <div class="listboarder2">
-            <div class="buttonstyle2"><div class="text-wrapper-9">Details</div></div>
-            <div class="buttonstyle3"><div class="text-wrapper-10">Play</div></div>
+            <div class="buttonstyle2"><div class="buttontextstyle2">Details</div></div>
+            <div class="buttonstyle3"><div class="buttontextstyle3">Play</div></div>
             <div class="songtitle_style2">Song Title</div>
           </div>
         </div>
@@ -200,8 +200,8 @@
         <!-- SFX Library List 5 -->
         <div class="list-12">
           <div class="listboarder2">
-            <div class="buttonstyle2"><div class="text-wrapper-9">Details</div></div>
-            <div class="buttonstyle3"><div class="text-wrapper-10">Play</div></div>
+            <div class="buttonstyle2"><div class="buttontextstyle2">Details</div></div>
+            <div class="buttonstyle3"><div class="buttontextstyle3">Play</div></div>
             <div class="songtitle_style2">Song Title</div>
           </div>
         </div>
@@ -209,8 +209,8 @@
         <!-- SFX Library List 6 -->
         <div class="list-13">
           <div class="listboarder2">
-            <div class="buttonstyle2"><div class="text-wrapper-9">Details</div></div>
-            <div class="buttonstyle3"><div class="text-wrapper-10">Play</div></div>
+            <div class="buttonstyle2"><div class="buttontextstyle2">Details</div></div>
+            <div class="buttonstyle3"><div class="buttontextstyle3">Play</div></div>
             <div class="songtitle_style2">Song Title</div>
           </div>
         </div>
