--- a/musiclib_main.html
+++ b/musiclib_main.html
@@ -32,7 +32,7 @@
         <div class="list">
           <div class="listboarder">
             <div class="album_style"></div>
-            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
           </div>
@@ -40,7 +40,7 @@
         <div class="list2">
           <div class="listboarder">
             <div class="album_style"></div>
-            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
           </div>
@@ -48,7 +48,7 @@
         <div class="list13">
           <div class="listboarder">
             <div class="album_style"></div>
-            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
           </div>
@@ -56,7 +56,7 @@
         <div class="div-wrapper">
           <div class="listboarder">
             <div class="album_style"></div>
-            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
           </div>
@@ -64,7 +64,7 @@
         <div class="list-2">
           <div class="listboarder">
             <div class="album_style"></div>
-            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
           </div>
@@ -72,7 +72,7 @@
         <div class="list-3">
           <div class="listboarder">
             <div class="album_style"></div>
-            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
           </div>
@@ -80,7 +80,7 @@
         <div class="list-4">
           <div class="listboarder">
             <div class="album_style"></div>
-            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
           </div>
@@ -88,7 +88,7 @@
         <div class="list-5">
           <div class="listboarder">
             <div class="album_style"></div>
-            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
           </div>
@@ -96,7 +96,7 @@
         <div class="list-6">
           <div class="listboarder">
             <div class="album_style"></div>
-            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
           </div>
@@ -104,7 +104,7 @@
         <div class="list-7">
           <div class="listboarder">
             <div class="album_style"></div>
-            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
           </div>
@@ -112,7 +112,7 @@
         <div class="list-8">
           <div class="listboarder">
             <div class="album_style"></div>
-            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
           </div>
@@ -120,7 +120,7 @@
         <div class="list-9">
           <div class="listboarder">
             <div class="album_style"></div>
-            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
           </div>
@@ -128,7 +128,7 @@
         <div class="list-10">
           <div class="listboarder">
             <div class="album_style"></div>
-            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
           </div>
@@ -136,7 +136,7 @@
         <div class="list-11">
           <div class="listboarder">
             <div class="album_style"></div>
-            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
           </div>
@@ -144,7 +144,7 @@
         <div class="list-12">
           <div class="listboarder">
             <div class="album_style"></div>
-            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
           </div>
@@ -152,7 +152,7 @@
         <div class="list-13">
           <div class="listboarder">
             <div class="album_style"></div>
-            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
           </div>
@@ -160,7 +160,7 @@
         <div class="list-14">
           <div class="listboarder">
             <div class="album_style"></div>
-            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
           </div>
@@ -168,7 +168,7 @@
         <div class="list-15">
           <div class="listboarder">
             <div class="album_style"></div>
-            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
           </div>
@@ -176,7 +176,7 @@
         <div class="list-16">
           <div class="listboarder">
             <div class="album_style"></div>
-            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
           </div>
@@ -184,7 +184,7 @@
         <div class="list-17">
           <div class="listboarder">
             <div class="album_style"></div>
-            <div class="buttonstyle"><div class="text-wrapper-7">Details</div></div>
+            <div class="buttonstyle"><div class="buttontextstyle">Details</div></div>
             <div class="songtitle_style">Song Title</div>
             <div class="artisttitle_style">Artist Title</div>
           </div>
