code changes update

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
         <div class="text-wrapper-12">Music Library</div>
-        <div class="more1"><div class="moretxt">More &gt;</div></div>
+
         <!-- Music Library List 1 -->
         <div class="list">
           <div class="listboarder">
@@ -95,7 +95,7 @@
 
 
        <div class="text-wrapper-13">Background Music Library</div>
-       <div class="more2"><div class="moretxt">More &gt;</div></div>
+
         <!-- BGM Library List 1 -->
         <div class="list-4">
           <div class="listboarder">
@@ -160,7 +160,7 @@
 
 
         <div class="text-wrapper-14">Sound Effects Library</div>
-        <div class="more3"><div class="moretxt">More &gt;</div></div>
+
         <!-- SFX Library List 1 -->
         <div class="list-10">
           <div class="listboarder2">
@@ -214,6 +214,12 @@
             <div class="songtitle_style2">Song Title</div>
           </div>
         </div>
+
+
+        <!-- More Buttons -->
+        <a href="musiclib_main.html"><div class="more1"><div class="moretxt">More &gt;</div></div></a> 
+        <a href="sfxlib_main.html"><div class="more3"><div class="moretxt">More &gt;</div></div></a> 
+        <a href="bgm_main.html"> <div class="more2"><div class="moretxt">More &gt;</div></div></a>
 
       </div>
     </div>
