--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="text-wrapper-2"><a href="sfxlib_main.html">SFX</a></div>
             <div class="text-wrapper-3"><a href="about.html">About</a></div>
             <div class="text-wrapper-4"><a href="searchpage.html">Search</a></div>
-            <div class="text-wrapper-5"><a href="bgm_main.html">BGM</a></div>
+            <div class="text-wrapper-5"><a href="bgmlib_main.html">BGM</a></div>
             <img class="pmlogo" src="resources/logo/pmlogo.png"/>
           </div>
         </div>
@@ -219,7 +219,7 @@
         <!-- More Buttons -->
         <a href="musiclib_main.html"><div class="more1"><div class="moretxt">More &gt;</div></div></a> 
         <a href="sfxlib_main.html"><div class="more3"><div class="moretxt">More &gt;</div></div></a> 
-        <a href="bgm_main.html"> <div class="more2"><div class="moretxt">More &gt;</div></div></a>
+        <a href="bgmlib_main.html"> <div class="more2"><div class="moretxt">More &gt;</div></div></a>
 
       </div>
     </div>
